--- a/study_android/test_app/app/build.gradle
+++ b/study_android/test_app/app/build.gradle
@@ -31,7 +31,13 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        dataBinding = true
+      dataBinding = true
+    }
+    //2023.12.08 머터리얼 디자인 추가하기 위해
+    buildscript {
+        repositories {
+            google()
+        }
     }
 }
 
@@ -46,4 +52,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     //2023.12.07. 프래그먼트 추가
     implementation("androidx.fragment:fragment-ktx:1.4.1")
+    //2023. 12. 8. 머터리얼 디자이 추가
+    implementation 'com.google.android.material:material:1.2.1'
 }
