--- a/study_android/test_app/app/build.gradle
+++ b/study_android/test_app/app/build.gradle
@@ -54,4 +54,12 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:1.4.1")
     //2023. 12. 8. 머터리얼 디자이 추가
     implementation 'com.google.android.material:material:1.2.1'
+
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.3.1")
+    //KTX
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
+
 }
